# Verification-Augmented-Reasoning

./: .gitignore  README.md  pyproject.toml  run_adversarial.py  run_aime.py  run_aime_2025.py  run_aime_single.py  run_diagnostic.py  test_single.py
analysis/: compare_conditions.py  plot_results.py
configs/: experiment_config.yaml
src/var_reasoning/: __init__.py  __main__.py
src/var_reasoning/benchmarks/: folio.py  gsm8k.py  humaneval.py  loader.py  math_bench.py
src/var_reasoning/engine/: backtracking.py  feedback.py  step_engine.py
src/var_reasoning/experiment/: conditions.py  cost_tracker.py  metrics.py  runner.py
src/var_reasoning/models/: gemini_provider.py  schemas.py  state.py
src/var_reasoning/prompts/: adversary_prompt.py  code_repair_prompt.py  inference_prompt.py  inference_retry_prompt.py  reasoning_prompt.py  simulation_prompt.py
src/var_reasoning/sandbox/: Dockerfile  executor.py
src/var_reasoning/verification/: adversary.py  assert_verifier.py  claim_registry.py  e_value.py  simulation_verifier.py  static_sanity.py  sympy_verifier.py  tautology_check.py  verification_router.py  z3_verifier.py
tests/: test_assert_verifier.py  test_backtracking.py  test_claim_registry.py  test_cost_tracker.py  test_e_value.py  test_schemas.py  test_simulation_verifier.py  test_static_sanity.py  test_step_engine.py  test_sympy_verifier.py  test_tautology_check.py  test_verification_router.py  test_z3_verifier.py
